--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,8 @@
 ---
 ---
+<a href="/">Home</a>
+<a href="/about/">About</a>
+<a href="/blog/">Blog</a>
 
 <html lang="en">
 	<head>
@@ -9,8 +12,9 @@
 		<meta name="generator" content={Astro.generator} />
 		<title>Astro</title>
 	</head>
+	
 	<body>
-		<h1>Baby's first Astro site!
+		<h1>My Astro Site
 		</h1>
 	</body>
 </html>
