--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,16 +1,22 @@
 ---
+const pageTitle = "My Learning Blog"
 ---
-
-
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>{pageTitle}</title>
+</head>
 <body>
   <a href="/">Home</a>
   <a href="/about/">About</a>
   <a href="/blog/">Blog</a>
 
   
-  <h1>My Astro Learning Blog</h1>
-  <p>This is where I will post about my journey learning Astro.</p>
+  <h1> {pageTitle} </h1>
+  <p>This is where I will post about my journey learning Astro. </p>
   <ul>
     <li><a href="/posts/post-1"> Post 1</a></li>
     <li><a href="/posts/post-2"> Post 2</a></li>
@@ -18,3 +24,4 @@
     
   </ul>
 </body>
+</html>
