applied a few styles to about page

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -13,6 +13,9 @@ const skills= ['HTML','CSS','JavaScript', 'React', 'Astro',]
 const happy = true;
 const finished = false;
 const goal = 3;
+const skillColor = 'navy'
+const fontWeight= 'bold '
+const textCase= 'uppercase'
 ---
 
 <html lang="en">
@@ -21,6 +24,20 @@ const goal = 3;
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{pageTitle}</title>
+
+    <style define:vars= {{skillColor, fontWeight, textCase}}>
+      h1{
+        color: purple;
+        font-size: 4rem;
+      }
+      .skill{
+        color: green;
+        color: var( --skillColor);
+        font-weight: var(--fontWeight);
+        text-transform: var(--textCase);
+      }
+    </style>
+
   </head>
   <body>
     <a href="/">Home</a>
@@ -47,12 +64,12 @@ const goal = 3;
 
     <p>My skills are:</p>
     <ul>
-      {skills.map((skill)=><li> {skill} </li>)}
+      {skills.map((skill)=><li class="skill" > {skill} </li>)}
     </ul>
 
       <!-- if happy is true then execute "<p> I am happy...<p>" -->
       {happy && <p>I am happy to be learning Astro!</p>}  
-      {finished && <p>I finsihed this tutorial! </p> }
+      {finished && <p>I finished this tutorial! </p> }
       <!-- if goal is 3 then exectue 'first p-tag' else execute 'second p-tag' -->
       {goal===3 ? <p>My goal is to finish in 3 days,</p> : <p>My goal is not 3 days.</p>}
 
