--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,4 +1,6 @@
 ---
+import Navigation from '../components/Navigation.astro';
+import Footer from '../components/Footer.astro';
 import '../styles/global.css'
 const pageTitle= 'About Me';
 
@@ -30,9 +32,7 @@ const textCase= 'uppercase'
 
   </head>
   <body>
-    <a href="/">Home</a>
-    <a href="/about/">About</a>
-    <a href="/blog/">Blog</a>
+    <Navigation/>
 
     <h1>{pageTitle}</h1>
     <h2>... and my new Astro site!</h2>
@@ -57,12 +57,13 @@ const textCase= 'uppercase'
       {skills.map((skill)=><li class="skill" > {skill} </li>)}
     </ul>
 
-      <!-- if happy is true then execute "<p> I am happy...<p>" -->
-      {happy && <p>I am happy to be learning Astro!</p>}  
-      {finished && <p>I finished this tutorial! </p> }
-      <!-- if goal is 3 then exectue 'first p-tag' else execute 'second p-tag' -->
-      {goal===3 ? <p>My goal is to finish in 3 days,</p> : <p>My goal is not 3 days.</p>}
-
+    <!-- if happy is true then execute "<p> I am happy...<p>" -->
+    {happy && <p>I am happy to be learning Astro!</p>}  
+    {finished && <p>I finished this tutorial! </p> }
+    <!-- if goal is 3 then exectue 'first p-tag' else execute 'second p-tag' -->
+    {goal===3 ? <p>My goal is to finish in 3 days,</p> : <p>My goal is not 3 days.</p>}
+    
+    <Footer/>
   </body>
 </html>
 
