--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,7 @@
 ---
+import Navigation from '../components/Navigation.astro';
+import Footer from '../components/Footer.astro';
 import '../styles/global.css'
-
 
 const pageTitle = "My Astro Blog"
 ---
@@ -15,10 +16,9 @@ const pageTitle = "My Astro Blog"
 	</head>
 	
 	<body>
-		<a href="/">Home</a>
-		<a href="/about/">About</a>
-		<a href="/blog/">Blog</a>
-
+		<Navigation/>
 		<h1>{pageTitle}</h1>
+		<Footer/>
 	</body>
+	
 </html>
