--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -6,7 +6,16 @@ const username ='withastro';
 ---
 <footer>
 <Social platform='instagram' username='astro.glob'/>
-<Social platform='github' username='vlcodes'/>
+<Social platform='github' username='vlcodes17'/>
 <Social platform='youtube' username='astrodotbuild'/>
   
 </footer>
+
+
+<style>
+  footer{
+    display:flex;
+    gap: 1rem;
+    margin-top: 2rem;
+  }
+</style>
