--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -1,7 +1,23 @@
 ---
 
 ---
+    <nav>
+        <a href="/">Home</a>
+        <a href="/about/">About</a>
+        <a href="/blog/">Blog</a>
+    </nav>
+    
 
-<a href="/">Home</a>
-    <a href="/about/">About</a>
-    <a href="/blog/">Blog</a>
+    <style>
+        nav{
+    display:flex;
+    gap: 1rem;
+    margin-top: 2rem;
+  }
+        a{
+    padding:0.5rem 1rem;
+    color: #fff9ecff;
+    background-color: #4c1d95;
+    text-decoration: none;
+  }
+    </style>
