--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,5 +1,5 @@
 ---
-import Navigation from '../components/Navigation.astro';
+import Header from '../components/Header.astro';
 import '../styles/global.css'
 const pageTitle = "My Learning Blog"
 ---
@@ -12,7 +12,7 @@ const pageTitle = "My Learning Blog"
   <title>{pageTitle}</title>
 </head>
 <body>
-  <Navigation/>
+  <Header/>
 
   
   <h1> {pageTitle} </h1>
