--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,5 @@
 ---
-import Navigation from '../components/Navigation.astro';
+import Header from '../components/Header.astro';
 import Footer from '../components/Footer.astro';
 import '../styles/global.css'
 
@@ -16,9 +16,8 @@ const pageTitle = "My Astro Blog"
 	</head>
 	
 	<body>
-		<Navigation/>
+		<Header/>
 		<h1>{pageTitle}</h1>
 		<Footer/>
 	</body>
-	
 </html>
