--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -1,10 +1,12 @@
 ---
 
 ---
-
+    <div class='nav-links'>
         <a href="/">Home</a>
         <a href="/about/">About</a>
         <a href="/blog/">Blog</a>
+    </div>
+        
 
     
 
@@ -12,7 +14,7 @@
     
         a{
     padding:0.5rem 1rem;
-    color: #fff9ecff;
+    color: var(--link-color);
     background-color: #4c1d95;
     text-decoration: none;
   }
