--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,10 +1,12 @@
 ---
 import Navigation from "./Navigation.astro";
+import Hamburger from "./Hamburger.astro";
 ---
 
 <header>
 
   <nav>
+    <Hamburger/>
     <Navigation/>
   </nav>
 
