--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -23,5 +23,8 @@ const pageTitle = "My Learning Blog"
     <li><a href="/posts/post-3"> Post 3</a></li>
     
   </ul>
+  <script>
+    import "../scripts/menu.js"
+  </script>
 </body>
 </html>
