--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,7 @@
 ---
 import Header from '../components/Header.astro';
 import Footer from '../components/Footer.astro';
+
 import '../styles/global.css'
 
 const pageTitle = "My Astro Blog"
@@ -19,5 +20,8 @@ const pageTitle = "My Astro Blog"
 		<Header/>
 		<h1>{pageTitle}</h1>
 		<Footer/>
+		<script>
+			import "../scripts/menu.js"
+		</script>
 	</body>
 </html>
