--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -33,20 +33,21 @@ h1 {
   font-size: 2.5rem;
 }
 
-a {
-  outline: none;
-  text-decoration: none;
-}
 
-a:link {
-  color: var(--link-color);
-}
-
-a:hover {
-  color: var(--old-gold);
-}
 
 /* nav styles  */
+.hamburger {
+  padding-right: 20px;
+  cursor: pointer;
+}
+
+.hamburger .line {
+  display: block;
+  width: 40px;
+  height: 5px;
+  margin-bottom: 10px;
+  background-color: #ff9776;
+}
 .nav-links {
   width: 100%;
   top: 5rem;
@@ -65,9 +66,9 @@ a:hover {
   font-weight: bold;
   text-transform: uppercase;
 }
-.nav-links a:hover,
-afocus {
+.nav-links a:hover,a:focus {
   background-color: #ff9776;
+  color: var(--header-color);
 }
 
 .expanded {
@@ -85,5 +86,8 @@ afocus {
   .nav-links a {
     display: inline-block;
     padding: 15px 20px;
+  }
+  .hamburger {
+    display: none;
   }
 }
