added base layout and refactored pages

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -4,7 +4,7 @@ const platform='github';
 const username ='withastro';
 
 ---
-<footer>
+<footer  class="nav-links">
 <Social platform='instagram' username='astro.glob'/>
 <Social platform='github' username='vlcodes17'/>
 <Social platform='youtube' username='astrodotbuild'/>
@@ -15,6 +15,7 @@ const username ='withastro';
 <style>
   footer{
     display:flex;
+    justify-content: space-between;
     gap: 1rem;
     margin-top: 2rem;
   }
