--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,30 +1,13 @@
 ---
-import Header from '../components/Header.astro';
-import '../styles/global.css'
-const pageTitle = "My Learning Blog"
+import BaseLayout from "../layouts/BaseLayout.astro";
+import "../styles/global.css";
+const pageTitle = "My Learning Blog";
 ---
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>{pageTitle}</title>
-</head>
-<body>
-  <Header/>
-
-  
-  <h1> {pageTitle} </h1>
-  <p>This is where I will post about my journey learning Astro. </p>
-  <ul>
-    <li><a href="/posts/post-1"> Post 1</a></li>
-    <li><a href="/posts/post-2"> Post 2</a></li>
-    <li><a href="/posts/post-3"> Post 3</a></li>
-    
-  </ul>
-  <script>
-    import "../scripts/menu.js"
-  </script>
-</body>
-</html>
+<BaseLayout pageTitle={pageTitle}>
+</BaseLayout>
+<p>This is where I will post about my journey learning Astro.</p>
+<ul>
+  <li><a href="/posts/post-1"> Post 1</a></li>
+  <li><a href="/posts/post-2"> Post 2</a></li>
+  <li><a href="/posts/post-3"> Post 3</a></li>
+</ul>
