--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -15,6 +15,7 @@ import Hamburger from "./Hamburger.astro";
 <style>
       nav{
     display:flex;
+    justify-content: space-around;
     gap: 1rem;
     margin-top: 2rem;
   }
