--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,6 +1,5 @@
 ---
-import Header from '../components/Header.astro';
-import Footer from '../components/Footer.astro';
+import BaseLayout from '../layouts/BaseLayout.astro';
 import '../styles/global.css'
 const pageTitle= 'About Me';
 
@@ -21,21 +20,12 @@ const fontWeight= 'bold'
 const textCase= 'uppercase'
 ---
 
-<html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{pageTitle}</title>
+<BaseLayout pageTitle={pageTitle}>
+  <h2>... and my new Astro site!</h2>
+    </BaseLayout>
+    
+    
 
-
-
-  </head>
-  <body>
-    <Header/>
-
-    <h1>{pageTitle}</h1>
-    <h2>... and my new Astro site!</h2>
     <p>I am working through Astro's introductory tutorial. This is the second page on my website, and it's the first one I built myself! </p>
 
     <p>This site will update as I complete more of the tutorial, so keep checking back and see how my journey is going! </p>
@@ -63,21 +53,14 @@ const textCase= 'uppercase'
     <!-- if goal is 3 then exectue 'first p-tag' else execute 'second p-tag' -->
     {goal===3 ? <p>My goal is to finish in 3 days,</p> : <p>My goal is not 3 days.</p>}
     
-    <Footer/>
-    <script>
-			import "../scripts/menu.js"
-		</script>
-  </body>
-</html>
+    
+
 
 <!-- STYLES -->
 
 <style define:vars= {{skillColor, fontWeight, textCase}}>
 
-  h1{
-    
-    font-size: 4rem;
-  }
+
   .skill{
     color: green;
     color: var(--header-color);
