--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,70 +1,76 @@
 ---
-import BaseLayout from '../layouts/BaseLayout.astro';
-import '../styles/global.css'
-const pageTitle= 'About Me';
+import BaseLayout from "../layouts/BaseLayout.astro";
+
+const pageTitle = "About Me";
 
 const me = {
-  firstName: 'V',
-  country: 'NZ',
-  occupation:'Student',
-  hobbies:['Illustration', 'Programming', 'Cooking and Baking']
+  firstName: "V",
+  country: "NZ",
+  occupation: "Student",
+  hobbies: ["Illustration", "Programming", "Cooking and Baking"],
 };
 
-const skills= ['HTML','CSS','JavaScript', 'React', 'Astro',]
+const skills = ["HTML", "CSS", "JavaScript", "React", "Astro"];
 
 const happy = true;
 const finished = false;
 const goal = 3;
-const skillColor = ''
-const fontWeight= 'bold'
-const textCase= 'uppercase'
+const skillColor = "";
+const fontWeight = "bold";
+const textCase = "uppercase";
 ---
 
 <BaseLayout pageTitle={pageTitle}>
   <h2>... and my new Astro site!</h2>
-    </BaseLayout>
-    
-    
 
-    <p>I am working through Astro's introductory tutorial. This is the second page on my website, and it's the first one I built myself! </p>
+  <p>
+    I am working through Astro's introductory tutorial. This is the second page
+    on my website, and it's the first one I built myself!
+  </p>
 
-    <p>This site will update as I complete more of the tutorial, so keep checking back and see how my journey is going! </p>
+  <p>
+    This site will update as I complete more of the tutorial, so keep checking
+    back and see how my journey is going!
+  </p>
 
-    <p>Here are a few facts about me:</p>
+  <p>Here are a few facts about me:</p>
 
-    <ul>
-      <li>My name is {me.firstName} </li>
-      <li> I live in {me.country} and I am a {me.occupation}  </li>
-      </ul>
+  <ul>
+    <li>My name is {me.firstName}</li>
+    <li>I live in {me.country} and I am a {me.occupation}</li>
+  </ul>
 
-      <p>My hobbies are : </p>
-      <ul>
-        {me.hobbies.map((skill)=><li> {skill} </li>)}
-      </ul>
+  <p>My hobbies are :</p>
+  <ul>
+    {me.hobbies.map((skill) => <li> {skill} </li>)}
+  </ul>
 
-    <p>My skills are:</p>
-    <ul>
-      {skills.map((skill)=><li class="skill" > {skill} </li>)}
-    </ul>
+  <p>My skills are:</p>
+  <ul>
+    {skills.map((skill) => <li class="skill"> {skill} </li>)}
+  </ul>
 
-    <!-- if happy is true then execute "<p> I am happy...<p>" -->
-    {happy && <p>I am happy to be learning Astro!</p>}  
-    {finished && <p>I finished this tutorial! </p> }
-    <!-- if goal is 3 then exectue 'first p-tag' else execute 'second p-tag' -->
-    {goal===3 ? <p>My goal is to finish in 3 days,</p> : <p>My goal is not 3 days.</p>}
-    
-    
-
-
-<!-- STYLES -->
-
-<style define:vars= {{skillColor, fontWeight, textCase}}>
-
-
-  .skill{
-    color: green;
-    color: var(--header-color);
-    font-weight: var(--fontWeight);
-    text-transform: var(--textCase);
+  <!-- if happy is true then execute "<p> I am happy...<p>" -->
+  {happy && <p>I am happy to be learning Astro!</p>}
+  {finished && <p>I finished this tutorial! </p>}
+  <!-- if goal is 3 then exectue 'first p-tag' else execute 'second p-tag' -->
+  {
+    goal === 3 ? (
+      <p>My goal is to finish in 3 days,</p>
+    ) : (
+      <p>My goal is not 3 days.</p>
+    )
   }
-</style>
+
+  </BaseLayout>
+
+  <!-- STYLES -->
+
+  <style define:vars={{ skillColor, fontWeight, textCase }}>
+    .skill {
+      color: var(--header-color);
+      font-weight: var(--fontWeight);
+      text-transform: var(--textCase);
+    }
+  </style>
+
