--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -32,7 +32,10 @@ h1 {
   margin: 1rem 0;
   font-size: 2.5rem;
 }
-
+h2{
+  color: var(--bold-color);
+  
+}
 
 
 /* nav styles  */
@@ -60,7 +63,7 @@ h1 {
 .nav-links a {
   display: block;
   text-align: center;
-  padding: 10px;
+  padding: 10px 0;
   text-decoration: none;
   font-size: 1.2rem;
   font-weight: bold;
