changed nav and footer font styles

--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -1,22 +1,18 @@
 ---
-
 ---
-    <div class='nav-links'>
-        <a href="/">Home</a>
-        <a href="/about/">About</a>
-        <a href="/blog/">Blog</a>
-        <a href="/tags">Tags</a>
-    </div>
-        
 
-    
+<div class="nav-links">
+  <a href="/">Home</a>
+  <a href="/about/">About</a>
+  <a href="/blog/">Blog</a>
+  <a href="/tags">Tags</a>
+</div>
 
-    <style>
-    
-        a{
-    padding:0.5rem 1rem;
+<style>
+  a {
+    padding: 0.5rem 1rem;
     color: var(--link-color);
-    background-color: #4c1d95;
     text-decoration: none;
+    font-style: oblique;
   }
-    </style>
+</style>
