--- a/src/components/Social.astro
+++ b/src/components/Social.astro
@@ -7,7 +7,8 @@ const { platform, username} = Astro.props;
   a{
     padding:0.5rem 1rem;
     color: #fff9ecff;
-    background-color: #4c1d95;
     text-decoration: none;
+    font-style:oblique;
+    font-stretch:85% ;
   }
 </style>
