--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -14,6 +14,7 @@ const{pageTitle} = Astro.props
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
 		<title>{pageTitle}</title>
+		<link rel="preload" href="Mona-Sans.woff2" as="font" type="font/woff2" crossorigin>
 	</head>
 	
 	<body>
