--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -10,11 +10,11 @@
 }
 @font-face {
   font-family: "Mona Sans";
-  src: url("/public/fonts/Mona-Sans.woff2") format("woff2 supports variations"),
+  src: url("/fonts/Mona-Sans.woff2") format("woff2 supports variations"),
     url("/public/fonts/Mona-Sans.woff2") format("woff2-variations");
   font-weight: 200 900;
   font-stretch: 75% 125%;
-  font-style: UltraLight Narrow ;
+  font-style: UltraLight Narrow;
 }
 html {
   background-color: var(--background-color);
@@ -24,7 +24,6 @@ html {
 }
 
 body {
-
   margin: 0 auto;
   width: 100%;
   max-width: 80ch;
@@ -79,7 +78,6 @@ h2 {
 .nav-links a:hover,
 a:focus {
   color: #ff9776;
-  
 }
 
 .expanded {
