removed light/dark mode (couldn't solve flash bug)

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,5 +6,5 @@ import Greeting from "../components/Greeting";
 
 <BaseLayout pageTitle={pageTitle}>
   <h2>My awesome blog subtitle</h2>
-  <Greeting messages={["Hi", "Hello", "Howdy", "Hey there"]} />
+  <Greeting client:load messages={["Hej", "Hallo", "Hola", "Habari","Hi", "Hello", "Howdy", "Hey there"]} />
 </BaseLayout>
