updated link styles, fixed hamburger

--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -15,3 +15,14 @@ const pageTitle = "My Learning Blog";
     }
   </ul>
 </BaseLayout>
+
+
+<style>
+  ul{
+    list-style: none;
+    font-family: "Mona Sans";
+    font-weight: bold;
+    font-style: oblique;
+  }
+
+</style>
