--- a/src/components/BlogPost.astro
+++ b/src/components/BlogPost.astro
@@ -2,4 +2,16 @@
 const { title, url } = Astro.props;
 ---
 
-<li><a href={url}>{title}</a> </li>
+<li><a href={url}>{title}</a></li>
+
+<style>
+  a {color: white;
+    text-decoration: none;
+  }
+  a:visited {
+    color: #7b6d8d;
+  }
+  a:hover{
+    color: #ff7a51;
+  }
+</style>
